Completed elementary defense building strategy - spawn units for first 40 operations.